Fixed the facebook item overflow hidden

--- a/themes/customized/assets/sass/home.scss
+++ b/themes/customized/assets/sass/home.scss
@@ -44,6 +44,11 @@ main {
                 height: 500px;
                 overflow: scroll;
             }
+
+            .facebook-item {
+                max-width: 100%;
+                overflow: hidden;
+            }
         }
     }
 }
